2009-08-17  higepon  <higepon@users.sourceforge.jp>

	* VM-Run.cpp (run): call/cc restoring code is now generated on restoring time not on capturing time.

	* VM-inl.h (VM::makeContinuation): Rewrote winders in C++ for performance reason.

2009-08-14  higepon  <higepon@users.sourceforge.jp>

	* UtilityProcedures.cpp (current-dynamic-winders): Adeed.

	* lib/core/bitwise.scm (bitwise-bit-field): Fixed argument check Issue 88.

	* ErrorProcedures.cpp (assertionViolationEx): Fixed an order of irritants.

2009-08-13  higepon  <higepon@users.sourceforge.jp>

	* Now memcached client conects to mulitple servers.
2009-08-12  higepon  <higepon@users.sourceforge.jp>

	* OSCompat.cpp (File::write): Not to use WriteConsole for redirection problem.

	* VM-Run.h (NUM_CMP_LOCAL): Fixed Issue 86.

	* lib/mosh/ffi.ss: Added malloc and free.

	* lib/mosh/ffi.ss: Allow bytevector can be passed to void*.

	* OSCompat.cpp (write): Handled Emacs.

	* OSCompatSocket.h: Added include wspiapi.h.

2009-08-11  higepon  <higepon@users.sourceforge.jp>

	* test/test.bat: Added test for ";" separated loadpaths.

	* Makefile.am (test): Added test for ":" separated loadpaths.

	* test/mysql.scm: Fixe test/mysql.ss (Issue 85).

	* scanner.re (Scanner): Added '-' to shebang character.

2009-08-10  higepon  <higepon@users.sourceforge.jp>

	* scheme.cpp (mosh_init): Ctrl-c for Windows.

	* configure.ac (CXXFLAGS): Commente out Gauche check.

	* win/include/config.h (VERSION): Changed VERSION for Windows.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss: Added space to repl ">mosh" => ">mosh " thanks to http://pc12.2ch.net/test/read.cgi/tech/1248657331/240.

2009-08-07  higepon  <higepon@users.sourceforge.jp>

	* RELNOTE: Updated RELNOTE for the next release.

2009-08-06  OKUMURA Yuki

	* FFIProcedures.cpp : Win32 MSVC.

2009-08-06  higepon  <higepon@users.sourceforge.jp>

	* Makefile.am (install-data-hook): Fixed a premission problem on installation.
